fixing a11y issues on mobile org page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1483,65 +1483,20 @@ td.citation-data.pub-item {
 }
 
 .organization-page #section_overview #tabOverview h3 {
-/*	padding: 2rem 0 2rem .5rem;*/
-display: none;
+	display: none;
 }
-
-
-/* mobile */
-/*.organization-page #section_overview {
-	margin-top: 0;
-	padding: 0 1.5rem;
-}
-.organization-page #section_overview .organization-overview {
-	font-size: 1.8rem;
-	grid-area: 1 / 1 / 2 / 13;
-	line-height: 2.8rem;
-	margin-bottom: 3rem;
-}
-.organization-page #section_overview .viz_collab-wrapper {
-	grid-area: 4 / 1 / 5 / 13;
-	margin-bottom: 4rem;
-}
-.organization-page #section_overview .viz_collab-image {
-	height: 20rem;
-	margin-bottom: 1.5rem;
-	object-fit: cover;
-	width: 100%;
-	min-width: 100vw;
-}
-.organization-photo-panel {
-	background-color: orange;
-	padding: 0;
-	padding-top: 4rem;
-}
-.organization-page .organization-title a {
-	font-weight: 600;
-}
-.organization-page .organization-title ul {
-	margin: 0;
-}
-.organization-page #section_overview h2 {
-	background-color: orange;
-	font-weight: 800;
-	margin: 0;
-	padding: 2rem;
-	position: absolute;
-	left: 0;
-	width: 100vw;
-}
-.organization-page .organization-title h2 {
-	background-color: #fff;
-	border-bottom: 6px solid red;
+.organization-page #section_overview .brown-affiliations-list a {
 	color: #333;
-	font-size: 2.4rem;
-	line-height: 3rem;
-	padding: 1.5rem;
-	text-align: center;
-	width: 80vw;
+/*		font-size: 2rem;
+		line-height: 2.4rem;
+		margin-bottom: .3rem;*/
 }
-.organization-page #section_overview p:nth-of-type(1) {
-	/*margin-top: 10rem;*/
+.organization-page #section_overview .brown-affiliations-list a:hover {
+	border-bottom: 3px solid #333;
+}
+.organization-page #section_overview .brown-affiliations-list span {
+/*	font-size: 1.8rem;
+	line-height: 2.1rem;*/
 }
 .organization-page #section_overview ul {
 	padding: 0;
@@ -1566,8 +1521,7 @@ display: none;
 	max-height: 10rem;
 	line-height: 3rem;
 	padding: 2rem .6rem;
-}*/
-
+}
 /* End of Organization Page */
 
 
@@ -1829,11 +1783,26 @@ display: none;
 		margin-bottom: 4rem;
 	}
 	.organization-page #section_overview .viz_collab-image {
+		background-color: hsla(0, 100%, 66%, 1);
 		height: 20rem;
 		margin-bottom: 1.5rem;
 		object-fit: cover;
 		width: 100%;
 		min-width: 100vw;
+	}
+	.organization-page #section_overview a#viz_collab.btn {
+		background-color: transparent;
+		border: 3px solid hsla(0, 100%, 46%, 1);
+		color: hsla(0, 100%, 46%, 1);
+	}
+	.organization-page #section_overview a#viz_collab.btn:hover {
+		background-color: hsla(0, 100%, 66%, 1);
+		border: none;
+		color: #fff;
+		padding-bottom: calc(.6rem + 3px);
+		padding-left: calc(1.2rem + 3px);
+		padding-right: calc(1.2rem + 3px);
+		padding-top: calc(.6rem + 3px);
 	}
 	.organization-photo-panel {
 		background-color: orange;
@@ -1870,15 +1839,12 @@ display: none;
 		display: none;
 	}
 	.organization-page #section_overview .brown-affiliations-list p {
-/*		display: flex;
-		flex-direction: column;*/
+		margin-bottom: 2rem;
 	}
 	.organization-page #section_overview .brown-affiliations-list a {
-		color: #333;
 		font-size: 2rem;
 		line-height: 2.4rem;
 		margin-bottom: .3rem;
-		width: auto;
 	}
 	.organization-page #section_overview .brown-affiliations-list a:hover {
 		border-bottom: 3px solid #FF5252;
